# rust-python-objects

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  book.toml  clippy.toml  deploy_book.sh  index.html  index.md  rust-python-objects.sublime-project  rust-python-objects.sublime-workspace  rustfmt.toml  sublime.tm
.github/workflows/: crates_io_publish.yaml  deploy_book.yaml
book/: 404.html  README.md  book.toml  extra.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
book/book/: 404.html  index.html  introduction.html  print.html  python_list.html  searchindex.js  searchindex.json
book/book/python_list/: index.html
book/book/python_list/methods/: append.html  extend.html  index.html
book/python_list/: index.html
book/python_list/methods/: append.html  extend.html  index.html
book/src/: SUMMARY.md  extra.md
book/src/python_list/methods/: README.md  append.md  extend.md
changelog/: 0.0.5.md  0.0.6.md  CHANGELOG.md
ci/: CI.yaml
docs/: python.md  python_list.md
docs/python_list/: append_pbool.md  showcase.md
examples/: boolean_example.rs  builtins.rs  enum_dict.rs  float_example.rs  hashable.rs  ideas.rs  integer_example.rs  object_trait.rs  python_builtins.rs  python_dict.rs  python_int.rs  python_list.rs  python_list_add.rs  python_list_append.rs  python_list_extend.rs  type_example.rs  unicode.rs
gh-pages/: 404.html  index.html  introduction.html  print.html  searchindex.js
gh-pages/python_list/: index.html
gh-pages/python_list/methods/: append.html  extend.html  index.html
my-first-book/: book.toml
src/: SUMMARY.md  boolean.rs  builtins.rs  character.rs  dict.rs  float.rs  int.rs  integer.rs  introduction.md  iterable.rs  lib.rs  list.rs  main.rs  object.rs  string.rs  util_traits.rs
src/dict/: dict.rs  hashable_object.rs  mod.rs  set.rs
src/list/: append.rs  append_front.rs  extend.rs  list.rs  mod.rs
tests/: test_list.rs
workflows/: CI.yaml  docs.yaml
