
[package]
name = "python-objects"
version = "0.0.4"
edition = "2021"
description = "rust crate that implements the architecture of the CPython objects. with this crate you can crate a list with any data type from rust"
authors = [ "alexzanderr <alexzander.dot.dev@gmail.com>" ]
license = "MIT"
# license-file = "LICENSE"
homepage = "https://github.com/alexzanderr/rust-python-objects"
repository = "https://github.com/alexzanderr/rust-python-objects"
documentation = "https://docs.rs/python-objects"
readme = "README.md"
keywords = ["python", "objects", "python-objects"]

# use this
# https://crates.io/category_slugs
categories = ["data-structures"]

[dependencies]
unicode-segmentation = "1.9.0"
color-backtrace = "0.5.1"
unindent = "0.1.8"


[profile.release]
# Link-time optimization (LTO) is a whole-program optimization technique that can improve runtime performance by 10-20% or more, at the cost of increased build times. For any individual Rust program it is easy to see if the runtime versus compile-time trade-off is worthwhile.
# The simplest way to try LTO is to add the following lines to the Cargo.toml file and do a release build.
lto = true

[lib]
name = "python"

[dev-dependencies]
pretty_assertions = "1.1.0"
doc-comment = "0.3.3"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
